@@ -1692,7 +1692,7 @@ void add_abilities(object *op, object *change) {
 /**
  * Checks if op can be combined with art.
  */
-static int legal_artifact_combination(object *op, artifact *art) {
+int legal_artifact_combination(object *op, artifact *art) {
     int neg, success = 0;
     linked_char *tmp;
     const char *name;
